added localization to menu.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -1,4 +1,30 @@
 {
+  "Account management": "Upravljanje nalozima",
   "devices": "Uređaji",
-  "siteId": "Broj Uređaja"
+  "siteId": "ID lokacije",
+  "Site No": "Br. uređaja",
+  "GSM ID": "GSM ID",
+  "Device ID": "Šifra potrošača",
+  "MPN": "MPN",
+  "Country ID": "Država",
+  "City ID": "Grad",
+  "Street": "Naziv ulice",
+  "Street No": "Broj",
+  "Deviation": "Deviation",
+  "Customer Name": "Ime i prezime korisnika",
+  "Customer Info": "Napomena o korisniku",
+  "Site Remark": "Napomena o mernom mestu",
+  "Remark": "Napomena o ruti",
+  "Name A": "Name A",
+  "Name B": "Name B",
+  "Name C": "Name C",
+  "Name D": "Name D",
+  "Unit A": "Unit A",
+  "Unit B": "Unit B",
+  "Unit C": "Unit C",
+  "Unit D": "Unit D",
+  "Multiplier A": "Multiplier A",
+  "Multiplier B": "Multiplier B",
+  "Multiplier C": "Multiplier C",
+  "Multiplier D": "Multiplier D"
 }
