localized labels for menu items.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,9 @@
 {
   "devices": "Devices",
-  "Account management": "Account management"
+  "Account management": "Account management",
+  "Register": "Register",
+  "Login": "Register",
+  "Auth": "Auth",
+  "Reset Password": "Reset Password",
+  "Request Password": "Request Password"
 }
