--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -1,5 +1,10 @@
 {
   "Account management": "Upravljanje nalozima",
+  "Auth": "Autentikacija",
+  "Reset Password": "Resetuj lozinku",
+  "Request Password": "Zatraži lozinku",
+  "Register": "Registracija",
+  "Login": "Uloguj se",
   "devices": "Uređaji",
   "siteId": "ID lokacije",
   "Site No": "Br. uređaja",
