added module account management infrastructure. Added user account component.Added moment package.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,6 @@
   "Login": "Register",
   "Auth": "Auth",
   "Reset Password": "Reset Password",
-  "Request Password": "Request Password"
+  "Request Password": "Request Password",
+  "Create Account": "Create Account"
 }
