--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -36,6 +36,8 @@
   "Name": "Ime",
   "City": "Grad",
   "Account Type": "Tip naloga",
-  "Status": "Status"
+  "Status": "Status",
+  "User Account Details": "Korisnicki nalog - detalji",
+  "Last Login": "Poslednje logovanje"
 
 }
