--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -41,5 +41,6 @@
   "User Account Details": "Korisnicki nalog - detalji",
   "Last Login": "Poslednje logovanje",
   "Search by username or email": "Brza pretraga po imenu ili mejlu",
-  "Search": "Pretraga"
+  "Search": "Pretraga",
+  "Administration": "Administracija"
 }
