menu items: added route for mail accounts.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -42,5 +42,6 @@
   "Last Login": "Poslednje logovanje",
   "Search by username or email": "Brza pretraga po imenu ili mejlu",
   "Search": "Pretraga",
-  "Administration": "Administracija"
+  "Administration": "Administracija",
+  "Email Management": "Mejl nalozi"
 }
