mail account: implemented displaying and editing of records.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -43,5 +43,7 @@
   "Search by username or email": "Brza pretraga po imenu ili mejlu",
   "Search": "Pretraga",
   "Administration": "Administracija",
-  "Email Management": "Mejl nalozi"
+  "Email Management": "Mejl nalozi",
+  "GSM2 Management": "GSM2 Menadžment",
+  "Search by account or server": "Brza pretraga po nalogu ili serveru"
 }
