added edit button; integrated with backend to retrieve email from GSM mail server

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -43,8 +43,7 @@
   "Search by username or email": "Brza pretraga po imenu ili mejlu",
   "Search": "Pretraga",
   "Administration": "Administracija",
-  "GSM2 Email Management": "GSM2 mejl nalozi",
-  "GSM2 Management": "GSM2 Menadžment",
+  "GSM2 Management": "GSM2 menadžment",
   "Search by account or server": "Brza pretraga po nalogu ili serveru",
   "Protocol": "Protokol",
   "Account": "Nalog",
