template mapping: integrated with mock BE.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -56,5 +56,30 @@
   "Template Management": "Template menadžment",
   "Field": "Polje",
   "Mapping": "Mapiranje",
-  "Select Template": "Izaberi templejt"
+  "Select Template": "Izaberi templejt",
+  "Consumer ID": "Šifra potrošača",
+  "Watermeter ID": "Broj vodomera",
+  "WMBUS ID": "WMBUS ID",
+  "Street number": "Broj",
+  "Consumer": "Ime i prezime korisnika",
+  "Consumer remarks": "Napomena o korisniku",
+  "Measuring point remarks": "Napomena o mernom mestu",
+  "Rute remarks": "Napomena o ruti",
+  "GSM-2 ID/Index": "GSM-2 ID/Index",
+  "AdoGsm device location": "Lokacija AdoGsm uređaja",
+  "AdoGsm device remarks": "Napomena o AdoGsm uređaju",
+  "Medium": "Medijum",
+  "Multiplier": "Množilac",
+  "Read Datetime": "Datum i vreme čitanja",
+  "Watermeter Status": "Stanje na vodomeru",
+  "Reverse Flow Status": "Stanje obrnutog protoka",
+  "Difference from last reading": "Razlika utrošene količina vode od zadnjeg čitanja",
+  "Status on day of reading": "Stanje na vodomeru na dan čitanja",
+  "Magnetic sabotage time": "Trajanje magnetne sabotaže",
+  "Strength of Signal": "Jačina signala",
+  "Alarms": "Alarmi",
+  "Main Battery": "Glavna baterija",
+  "GSM Battery": "GSM Baterija",
+  "Create Template": "Napravi template",
+  "Edit Template": "Izmeni template"
 }
