--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -81,5 +81,6 @@
   "Main Battery": "Glavna baterija",
   "GSM Battery": "GSM Baterija",
   "Create Template": "Napravi template",
-  "Edit Template": "Izmeni template"
+  "Edit Template": "Izmeni template",
+  "Save Template": "Snimi template"
 }
