template screen: integration with BE

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -82,5 +82,6 @@
   "GSM Battery": "GSM Baterija",
   "Create Template": "Napravi template",
   "Edit Template": "Izmeni template",
-  "Save Template": "Snimi template"
+  "Save Template": "Snimi template",
+  "Delete Template": "Izbriši template"
 }
