Device renamed to UserCard.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "devices": "Devices",
+  "userCards": "UserCards",
   "Account management": "Account management",
   "Register": "Register",
   "Login": "Register",
