--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -5,11 +5,11 @@
   "Request Password": "Zatraži lozinku",
   "Register": "Registracija",
   "Login": "Uloguj se",
-  "devices": "Uređaji",
+  "userCards": "Potrošacka kartica",
   "siteId": "ID lokacije",
   "Site No": "Br. uređaja",
   "GSM ID": "GSM ID",
-  "Device ID": "Šifra potrošača",
+  "UserCard ID": "Šifra potrošača",
   "MPN": "MPN",
   "Country ID": "Država",
   "City ID": "Grad",
@@ -66,8 +66,8 @@
   "Measuring point remarks": "Napomena o mernom mestu",
   "Rute remarks": "Napomena o ruti",
   "GSM-2 ID/Index": "GSM-2 ID/Index",
-  "AdoGsm device location": "Lokacija AdoGsm uređaja",
-  "AdoGsm device remarks": "Napomena o AdoGsm uređaju",
+  "AdoGsm userCard location": "Lokacija AdoGsm uređaja",
+  "AdoGsm userCard remarks": "Napomena o AdoGsm uređaju",
   "Medium": "Medijum",
   "Multiplier": "Množilac",
   "Read Datetime": "Datum i vreme čitanja",
