corrected labels; removed unnecessary step.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -88,5 +88,7 @@
   "Templates": "Kreiraj templejt",
   "Import User Card": "Uvezi korisničku karticu",
   "Select File Type": "Izaberi tip fajla",
-  "Select File": "Izaberi fajl"
+  "Select File": "Izaberi fajl",
+  "Upload File": "Aploaduj fajl",
+  "Map columns": "Mapiraj kolone"
 }
