corrected labels; removed unnecessary step.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -89,6 +89,6 @@
   "Import User Card": "Uvezi korisničku karticu",
   "Select File Type": "Izaberi tip fajla",
   "Select File": "Izaberi fajl",
-  "Upload File": "Aploaduj fajl",
+  "Upload File": "Uvezi fajl",
   "Map columns": "Mapiraj kolone"
 }
