mapping: added infrastructure.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -90,5 +90,6 @@
   "Select File Type": "Izaberi tip fajla",
   "Select File": "Izaberi fajl",
   "Upload File": "Uvezi fajl",
-  "Map columns": "Mapiraj kolone"
+  "Map columns": "Mapiraj kolone",
+  "[Click To Select Mapping]": "[Klikni me da izaberes mapiranje]"
 }
