--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -91,6 +91,6 @@
   "Select File": "Izaberi fajl",
   "Upload File": "Uvezi fajl",
   "Map columns": "Mapiraj kolone",
-  "[Click To Select Mapping]": "[Klikni me da izaberes mapiranje]",
+  "[Mapping]": "[Mapiranje]",
   "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje."
 }
