user card: refactored to column definition from the document.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -5,33 +5,19 @@
   "Request Password": "Zatraži lozinku",
   "Register": "Registracija",
   "Login": "Uloguj se",
-  "userCards": "Potrošacka kartica",
-  "siteId": "ID lokacije",
-  "Site No": "Br. uređaja",
-  "GSM ID": "GSM ID",
-  "UserCard ID": "Šifra potrošača",
-  "MPN": "MPN",
-  "Country ID": "Država",
-  "City ID": "Grad",
-  "Street": "Naziv ulice",
-  "Street No": "Broj",
-  "Deviation": "Deviation",
-  "Customer Name": "Ime i prezime korisnika",
-  "Customer Info": "Napomena o korisniku",
-  "Site Remark": "Napomena o mernom mestu",
-  "Remark": "Napomena o ruti",
-  "Name A": "Name A",
-  "Name B": "Name B",
-  "Name C": "Name C",
-  "Name D": "Name D",
-  "Unit A": "Unit A",
-  "Unit B": "Unit B",
-  "Unit C": "Unit C",
-  "Unit D": "Unit D",
-  "Multiplier A": "Multiplier A",
-  "Multiplier B": "Multiplier B",
-  "Multiplier C": "Multiplier C",
-  "Multiplier D": "Multiplier D",
+  "Customer ID": "Sifra potrosaca",
+  "Customer name": "Ime i prezime",
+  "Customer surname": "Prezime",
+  "Address": "Ulica",
+  "Address number": "Broj",
+  "Address number 2": "Broj 2",
+  "Device ID": "Broj vodomera",
+  "ADOGSM-2 ID": "ADOGSM-2 ID",
+  "Site remarks": "Napomena o mernom mestu",
+  "Route Remarks": "Napomena o ruti",
+  "Route": "Ruta",
+  "AdoGsm location": "Lokacija AdoGsm uredjaja",
+  "AdoGsm remarks": "Napomena o AdoGsm uredjaju",
   "Create Account": "Napravi nalog",
   "Name": "Ime",
   "City": "Grad",
