added role infrastructure; integrated with user_role table. added redirect to user-card after importing data.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -22,7 +22,7 @@
   "Name": "Ime",
   "City": "Grad",
   "Password": "Lozinka",
-  "Account Type": "Tip naloga",
+  "Role": "Uloga",
   "Status": "Status",
   "User Account Details": "Korisnicki nalog - detalji",
   "Last Login": "Poslednje logovanje",
