--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -71,7 +71,7 @@
   "Template Name": "Ime novog templejta",
   "Delete Template": "Obriši templejt",
   "It's not allowed to delete default import or export template.": "Nije dozvoljeno brisanje default templejta.",
-  "Templates": "Kreiraj templejt",
+  "Column Template": "Konfiguriši kolone",
   "Import User Card": "Uvezi potrošačku karticu",
   "Select File Type": "Izaberi tip fajla",
   "Select File": "Izaberi fajl",
