--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -78,5 +78,7 @@
   "Upload File": "Uvezi fajl",
   "Map columns": "Mapiraj kolone",
   "[Mapping]": "[Mapiranje]",
-  "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje."
+  "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje.",
+  "Select City": "Izaberi grad",
+  "User Card": "Potrošačka kartica"
 }
