user card: added customer no. column, removed customer surname column, adjusted column widths.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -44,6 +44,7 @@
   "Mapping": "Mapiranje",
   "Select Template": "Izaberi templejt",
   "Consumer ID": "Šifra potrošača",
+  "Customer No.": "Broj potrošača",
   "Watermeter ID": "Broj vodomera",
   "WMBUS ID": "WMBUS ID",
   "Street number": "Broj",
