--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -81,5 +81,6 @@
   "[Mapping]": "[Mapiranje]",
   "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje.",
   "Select City": "Izaberi grad",
-  "User Card": "Potrošačka kartica"
+  "User Card": "Potrošačka kartica",
+  "Devices": "Uredjaji"
 }
