started adding cities

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -82,5 +82,6 @@
   "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje.",
   "Select City": "Izaberi grad",
   "User Card": "Potrošačka kartica",
-  "Devices": "Uređaji"
+  "Devices": "Uređaji",
+  "Cities": "Gradovi"
 }
