Added device table, Device and DeviceGsm classes. The start of building the device infrastructure.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -87,5 +87,14 @@
   "Cities": "Gradovi",
   "Upload Routes": "Uvezi rute",
   "Edit Route": "Izmeni rutu",
-  "Create Route": "Napravi rutu"
+  "Create Route": "Napravi rutu",
+  "Register A": "Registar A",
+  "Register B": "Registar B",
+  "Register C": "Registar C",
+  "Register D": "Registar D",
+  "Multiplier A": "Množilac A",
+  "Multiplier B": "Množilac B",
+  "Multiplier C": "Množilac C",
+  "Multiplier D": "Množilac D",
+  "Customer remarks": "Napomena o korisniku"
 }
