Hidden ID column when displaying.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -96,5 +96,7 @@
   "Multiplier B": "Množilac B",
   "Multiplier C": "Množilac C",
   "Multiplier D": "Množilac D",
-  "Customer remarks": "Napomena o korisniku"
+  "Customer remarks": "Napomena o korisniku",
+  "Device Type": "Tip uređaja",
+  "Select Device Type": "Izaberi tip uređaja"
 }
