Hidden ID column when displaying.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -74,7 +74,7 @@
   "Delete Template": "Obriši templejt",
   "It's not allowed to delete default import or export template.": "Nije dozvoljeno brisanje default templejta.",
   "Column Template": "Konfiguriši kolone",
-  "Import User Card": "Uvezi potrošačku karticu",
+  "Import Database": "Uvezi bazu podataka",
   "Select File Type": "Izaberi tip fajla",
   "Select File": "Izaberi fajl",
   "Upload File": "Uvezi fajl",
