Changed primeng style to match material style.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -84,6 +84,7 @@
   "Select City": "Izaberi grad",
   "User Card": "Potrošačka kartica",
   "GSM2 Devices": "GSM uređaji",
+  "WMBUS Devices": "WMBUS uređaji",
   "Cities": "Gradovi",
   "Upload Routes": "Uvezi rute",
   "Edit Route": "Izmeni rutu",
