Device: new device adding, start of input form.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -99,5 +99,6 @@
   "Multiplier D": "Množilac D",
   "Customer remarks": "Napomena o korisniku",
   "Device Type": "Tip uređaja",
-  "Select Device Type": "Izaberi tip uređaja"
+  "Select Device Type": "Izaberi tip uređaja",
+  "Variance": "Odstupanje"
 }
