Device Card - mock up od the screen.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -109,5 +109,8 @@
   "Register Nr. 2": "Registarski Br. 2",
   "Register Nr.": "Registarski Br.",
   "Reading Book": "Čitacka knjiga",
-  "Device No": "Broj vodomera"
+  "Device No": "Broj vodomera",
+  "Municipality": "Opština",
+  "Zone device": "Zonski merač"
+
 }
