--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -83,7 +83,7 @@
   "This table displays just subset of the imported data needed for mapping.": "Ova tabela prikazuje samo deo uvezenih podataka; Deo dovoljan za mapiranje.",
   "Select City": "Izaberi grad",
   "User Card": "Potrošačka kartica",
-  "GSM2 Devices": "GSM uređaji",
+  "Devices": "Uređaji",
   "WMBUS Devices": "WMBUS uređaji",
   "Device": "Uređaj",
   "Cities": "Gradovi",
