fixed typo - pressure.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -120,6 +120,6 @@
   "Gasoline": "Gas",
   "Direct": "Direktan smer",
   "Reverse": "Obrnut smer",
-  "Preasure": "Pritisak",
+  "Pressure": "Pritisak",
   "Temperature": "Temperatura"
 }
