removed loading from ngOnInit.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -124,5 +124,6 @@
   "Temperature": "Temperatura",
   "Create Device": "Kreiraj uređaj",
   "Edit Device": "Izmeni uređaj",
-  "Import Devices": "Uvezi uređaje"
+  "Import Devices": "Uvezi uređaje",
+  "Manual Entry": "Ručni unos"
 }
