export user card: infrastructure work.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -125,5 +125,6 @@
   "Create Device": "Kreiraj uređaj",
   "Edit Device": "Izmeni uređaj",
   "Import Devices": "Uvezi uređaje",
-  "Manual Entry": "Ručni unos"
+  "Manual Entry": "Ručni unos",
+  "Run Import": "Uvezi fajlove"
 }
