refactoring. removed unused buttons.

--- a/src/assets/i18n/rs.json
+++ b/src/assets/i18n/rs.json
@@ -127,5 +127,6 @@
   "Import Devices": "Uvezi uređaje",
   "Manual Entry": "Ručni unos",
   "Run Import": "Uvezi fajlove",
-  "Export Database": "Izvezi bazu podataka"
+  "Export Database": "Izvezi bazu podataka",
+  "Export": "Izvezi podatke"
 }
