added usage from, usage to

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -132,5 +132,6 @@
   "Usage From": "Potrošnja od",
   "Usage To": "Potrošnja do",
   "Usage Reverse From": "Reverzna potrošnja od",
-  "Usage Reverse To": "Reverzna potrošnja do"
+  "Usage Reverse To": "Reverzna potrošnja do",
+  "Clear": "Pobriši"
 }
