dialog user card - user details.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -61,8 +61,8 @@
   "Read Datetime": "Datum i vreme čitanja",
   "Watermeter Status": "Stanje na vodomeru",
   "Reverse Flow Status": "Stanje obrnutog protoka",
-  "Difference from last reading": "Razlika utrošene količina vode od zadnjeg čitanja",
-  "Status on day of reading": "Stanje na vodomeru na dan čitanja",
+  "Difference from last reading": "Razlika od zadnjeg čitanja",
+  "Status on day of reading": "Stanje na dan čitanja",
   "Magnetic sabotage time": "Trajanje magnetne sabotaže",
   "Strength of Signal": "Jačina signala",
   "Alarms": "Alarmi",
