user card details - history table implementation

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -138,5 +138,6 @@
   "Current": "Trenutni",
   "Historical": "Istorijski",
   "Date From": "Od datuma",
-  "Date To": "Do datuma"
+  "Date To": "Do datuma",
+  "Data": "Podaci"
 }
