user card details - history table implementation

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -139,5 +139,6 @@
   "Historical": "Istorijski",
   "Date From": "Od datuma",
   "Date To": "Do datuma",
-  "Data": "Podaci"
+  "Data": "Podaci",
+  "Monthly Usage": "Mesečna potrosnja"
 }
