user-account: added access field to control view level.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -140,5 +140,7 @@
   "Date From": "Od datuma",
   "Date To": "Do datuma",
   "Data": "Podaci",
-  "Monthly Usage": "Mesečna potrosnja"
+  "Monthly Usage": "Mesečna potrosnja",
+  "Access Level": "Nivo pristupa",
+  "Active": "Aktivan"
 }
