--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -140,7 +140,11 @@
   "Date From": "Od datuma",
   "Date To": "Do datuma",
   "Data": "Podaci",
-  "Monthly Usage": "Mesečna potrosnja",
+  "Monthly Usage": "Mesečna potrošnja",
   "Access Level": "Nivo pristupa",
-  "Active": "Aktivan"
+  "Active": "Aktivan",
+  "Usage Current Per Criteria": "Ukupna potrošnja po kriterijumu",
+  "Usage Reverse Per Criteria": "Ukupna reverzna potrošnja po kriterijumu",
+  "Usage Monthly Per Criteria": "Ukupna mesečna potrošnja po kriterijumu",
+  "Usage Average": "Ukupna prosečna potrošnja po kriterijumu"
 }
