address: changed to use address table. address can be seached by multiselect.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -112,6 +112,7 @@
   "Device No": "Broj vodomera",
   "Municipality": "Opština",
   "Zone device": "Zonski merač",
+  "Zone devices": "Zonski merači",
   "Mode A": "Mod A",
   "Mode B": "Mod B",
   "Mode C": "Mod C",
