address: changed to use address table. address can be seached by multiselect.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -106,8 +106,8 @@
   "Customer Info": "Podaci o korisniku",
   "Device Info": "Podaci o uređaju",
   "Remarks": "Napomene",
-  "Register Nr. 2": "Registarski Br. 2",
-  "Register Nr.": "Registarski Br.",
+  "Register Nr. 2": "Reg. Br. 2",
+  "Register Nr.": "Reg. Br.",
   "Reading Book": "Čitacka knjiga",
   "Device No": "Broj vodomera",
   "Municipality": "Opština",
