graph for search criteria added.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -147,5 +147,6 @@
   "Usage Current": "Ukupna potrošnja",
   "Usage Reverse": "Reverzna potrošnja",
   "State": "Stanje",
-  "Usage Average": "Prosečna potrošnja"
+  "Usage Average": "Prosečna potrošnja",
+  "Graph": "Grafikon potrošnje"
 }
