jasper reports - summary implementation.

--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -148,5 +148,6 @@
   "Usage Reverse": "Reverzna potrošnja",
   "State": "Stanje",
   "Usage Average": "Prosečna potrošnja",
-  "Graph": "Grafikon potrošnje"
+  "Graph": "Grafikon potrošnje",
+  "Generate Report": "Generiši izveštaj"
 }
