--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -11,8 +11,8 @@
   "Address": "Ulica",
   "Address number": "Broj",
   "Address number 2": "Broj 2",
-  "Device ID": "ID broj uređaja",
-  "ADOGSM-2 ID": "ID GSM2 uređaja",
+  "Device ID": "Broj AMR uređaja",
+  "ADOGSM-2 ID": "Broj GSM2 uređaja",
   "Site remarks": "Napomena o mernom mestu",
   "Route Remarks": "Napomena o ruti",
   "Route": "Ruta",
@@ -134,7 +134,7 @@
   "Usage To": "Potrošnja do",
   "Usage Reverse From": "Reverzna potrošnja od",
   "Usage Reverse To": "Reverzna potrošnja do",
-  "Clear": "Pobriši",
+  "Clear": "Izbriši",
   "Display Type": "Vrsta prikaza",
   "Current": "Trenutni",
   "Historical": "Istorijski",
@@ -145,7 +145,7 @@
   "Access Level": "Nivo pristupa",
   "Active": "Aktivan",
   "Usage Current": "Ukupna potrošnja",
-  "Usage Reverse": "Reverzna potrošnja",
+  "Usage Reverse": "Povratni tok vode",
   "State": "Stanje",
   "Usage Average": "Prosečna potrošnja",
   "Graph": "Grafikon potrošnje",
