--- a/src/main/web/src/assets/i18n/rs.json
+++ b/src/main/web/src/assets/i18n/rs.json
@@ -152,5 +152,7 @@
   "Generate Report": "Generiši izveštaj",
   "Summary Graph": "Zbirni grafikon",
   "Search Activity": "Pretraga loga aktivnosti",
-  "Activity Log": "Log Aktivnosti"
+  "Activity Log": "Log Aktivnosti",
+  "Average Usage": "Prosečna potrošnja",
+  "Unit": "Merna jedinica"
 }
